--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,7 +5,7 @@ phases:
       nodejs: 10
     commands:
       - npm i
-      - aws cloudformation package --template-file template.yaml --s3-bucket lambda-cd-bucket-test --output-template-file deploy.yaml
+      - aws cloudformation package --template-file template.yaml --s3-bucket ccs.lambda-cd-bucket-test --output-template-file deploy.yaml
 artifacts:
   type: zip
   files:
