Removed domain options for api, added different stage (testing versioning of apis through edge function)

--- a/template.yaml
+++ b/template.yaml
@@ -10,22 +10,14 @@ Globals:
     OpenApiVersion: '3.0.1'
 
 Parameters:
-  ApiBasePath:
-    Default: v2
-    Description: Base path of the api. 'v1' - example.co.uk/v1/endpoints
+  MAJOR_VERSION:
+    Default: 1
+    Description: Minor version of the API
     Type: String
-  DomainName:
-    Default: api.esource.roweitdev.co.uk
-    Description: Domain name to call the api from.
+  MINOR_VERSION:
+    Default: 1
+    Description: Minor version of the API
     Type: String
-  HostedZoneName:
-    Default: esource.roweitdev.co.uk.
-    Description: Name of the desired hosted zone.
-    Type: String
-  SSMCertificateArn:
-    Description: 'Arn of the esource certificate created via terraform.'
-    Type: AWS::SSM::Parameter::Value<String>
-    Default: '/esource/config/ESOURCE_api_certificate_arn'
 
 Resources:
   ApiGatewayAuthorizerRole:
@@ -131,7 +123,7 @@ Resources:
   ServerlessRestAPI:
     Type: AWS::Serverless::Api
     Properties:
-      StageName: dev
+      StageName: !Ref MINOR_VERSION
       EndpointConfiguration: REGIONAL
       DefinitionBody:
         'Fn::Transform':
@@ -139,11 +131,11 @@ Resources:
           Parameters:
             Location: './openapi3.yaml'
 
-  APIBasePathMapping:
-    DependsOn: ServerlessRestAPIdevStage #Required - Needs to wait for SAM to create stage before mapping {LOGICAL_API_NAME}{Stage}Stage
-    Type: AWS::ApiGateway::BasePathMapping
-    Properties:
-      DomainName: !Ref DomainName
-      RestApiId: !Ref ServerlessRestAPI
-      Stage: dev
-      BasePath: !Ref ApiBasePath
+  # APIBasePathMapping:
+  #   DependsOn: ServerlessRestAPIdevStage #Required - Needs to wait for SAM to create stage before mapping {LOGICAL_API_NAME}{Stage}Stage
+  #   Type: AWS::ApiGateway::BasePathMapping
+  #   Properties:
+  #     DomainName: !Ref DomainName
+  #     RestApiId: !Ref ServerlessRestAPI
+  #     Stage: dev
+  #     BasePath: !Ref ApiBasePath
