--- a/template.yaml
+++ b/template.yaml
@@ -123,7 +123,7 @@ Resources:
   ServerlessRestAPI:
     Type: AWS::Serverless::Api
     Properties:
-      StageName: !Ref MinorVersion
+      StageName: default
       EndpointConfiguration: REGIONAL
       DefinitionBody:
         'Fn::Transform':
