--- a/template.yaml
+++ b/template.yaml
@@ -18,6 +18,14 @@ Parameters:
     Default: "2"
     Description: Minor version of the API
     Type: String
+  CognitoUserPoolId:
+    Description: 'User Pool Id for the Cognito User Pool used with the API.'
+    Type: AWS::SSM::Parameter::Value<String>
+    Default: '/esource/cognito/COGNITO_USER_POOL_ID'
+  CognitoClientId:
+    Description: 'Client Id for the Cognito User Pool used with the API.'
+    Type: AWS::SSM::Parameter::Value<String>
+    Default: '/esource/cognito/COGNITO_CLIENT_ID'
 
 Resources:
   ApiGatewayAuthorizerRole:
@@ -51,6 +59,10 @@ Resources:
       Role:
         Fn::Sub: ${CustomAuthorizerFunctionRole.Arn}
       Runtime: nodejs10.x
+      Environment:
+        Variables:
+          COGNITO_USER_POOL_ID: !Ref CognitoUserPoolId
+          COGNITO_CLIENT_ID: !Ref CognitoClientId
     Type: AWS::Serverless::Function
 
   CustomAuthorizerFunctionRole:
