--- a/template.yaml
+++ b/template.yaml
@@ -58,7 +58,7 @@ Resources:
       Handler: authorizer.handler
       Role:
         Fn::Sub: ${CustomAuthorizerFunctionRole.Arn}
-      Runtime: nodejs10.x
+      Runtime: nodejs8.10
       Environment:
         Variables:
           COGNITO_USER_POOL_ID: !Ref CognitoUserPoolId
@@ -85,7 +85,7 @@ Resources:
     Properties:
       CodeUri: src/
       Handler: app.getAllUsers
-      Runtime: nodejs10.x
+      Runtime: nodejs8.10
     Type: AWS::Serverless::Function
 
   GetUsersLambdaPermission:
@@ -102,7 +102,7 @@ Resources:
     Properties:
       CodeUri: src/
       Handler: app.getUser
-      Runtime: nodejs10.x
+      Runtime: nodejs8.10
     Type: AWS::Serverless::Function
 
   GetUserLambdaPermission:
@@ -119,7 +119,7 @@ Resources:
     Properties:
       CodeUri: src/
       Handler: app.createUser
-      Runtime: nodejs10.x
+      Runtime: nodejs8.10
     Type: AWS::Serverless::Function
 
   CreateUserLambdaPermission:
